Include info in toml

--- a/0.1.0/typst.toml
+++ b/0.1.0/typst.toml
@@ -2,3 +2,10 @@
 name = "cbt-newsletter"
 version = "0.1.0"
 entrypoint = "lib.typ"
+authors = ["Benedikt Claus"]
+license = "MIT"
+description = "CBT newsletter package"
+
+[template]
+path = "template"
+entrypoint = "main.typ"
